chore: change configuration to fix several warnings during test